# EvoMem

./: .gitignore  README_ZH.md  pyproject.toml  reproduce.sh  sglang.sh
baseline/: memp.sh  react.sh  tf-grpo.sh
configs/agents/practice/: math_practice_agent.yaml  memp_math_eval_aime24_memp_agent.yaml  memp_math_practice_memp_agent.yaml  memp_web_practice_memp_agent.yaml
configs/eval/math/: math_AIME24.yaml  math_AIME25.yaml  math_practice_AIME24.yaml  math_practice_AIME25.yaml
configs/eval/web/: web.yaml  web_practice.yaml
configs/practice/: memp_math_reasoning.yaml  memp_web_search.yaml
other-projects/MemP/ProcedureMem/: alfworld_run.py  alfworld_run_update.py  llm_api.py  memory_adjust.py  run_memp_offline.py  run_memp_online.py
scripts/: run_memp.py
tests/: test-api.py  test-web-tool.py  test_api_tool_call.py
utu/: __init__.py
utu/eval/data/: data_manager.py
utu/practice/: __init__.py  memp.py  training_free_grpo.py  utils.py
utu/prompts/practice/: processor.yaml
utu/runner/: __init__.py
utu/tools/search/: baidu_search.py  google_search.py  jina_crawl.py  jina_search.py
